info page customisation

--- a/style.css
+++ b/style.css
@@ -21,6 +21,17 @@ body {
   margin-top: 275px; /* Add space below navbar */
   margin-bottom: 20px; /* Add some bottom margin */
 }
+.glass-card-info {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 2rem;
+  backdrop-filter: blur(15px);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.25);
+  padding: 40px;
+  max-width: 1200px;
+  text-align: center;
+  margin-top: 100px; /* Add space below navbar */
+  margin-bottom: 20px; /* Add some bottom margin */
+}
 
 h1 {
   font-size: 28px;
